--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,25 @@
-
+<!DOCTYPE html>
+<html class="homePage">
+<head>
+	<!-- This is a comment! Text here will be ignored by the browser. -->
+	<meta charset="UTF-8">
+	<title>About Me</title>
+	<link href="myCSS.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+<div class="container">
+  <div class="header">
+  	<h1>About Me</h1>
+  </div>
+  <div class="nav">
+    <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="basketball/index.html">Basketball</a> </h3>
+  </div>
+  <div class="content">
+	  <img src="images/welcome.jpg" alt="Welcome" width="960" height="500">
+  </div>
+  <div class="footer">
+    <h4><a href="aboutme.html">About Me</a> | <a href="mailto:kappter@gmail.com">Contact</a> | Copyright 2023</h4>
+  </div>
+</div>
+</body>
+</html>
