--- a/aboutme.html
+++ b/aboutme.html
@@ -15,7 +15,12 @@
     <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="basketball/index.html">Basketball</a> </h3>
   </div>
   <div class="content">
-	  <img src="images/welcome.jpg" alt="Welcome" width="960" height="500">
+	  <h1>Skills</h1>
+	  <ol>
+  		<li>Typing 44WPM</li>
+  		<li>ScreenPrinting</li>
+  		<li>Intermediate Photoshop</li>
+	  </ol>
   </div>
   <div class="footer">
     <h4><a href="aboutme.html">About Me</a> | <a href="mailto:kappter@gmail.com">Contact</a> | Copyright 2023</h4>
