--- a/aboutme.html
+++ b/aboutme.html
@@ -15,11 +15,23 @@
     <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="basketball/index.html">Basketball</a> </h3>
   </div>
   <div class="content">
-	  <h1>Skills</h1>
+	  <h3>Skills</h3>
 	  <ol>
   		<li>Typing 44WPM</li>
   		<li>ScreenPrinting</li>
   		<li>Intermediate Photoshop</li>
+	  </ol>
+	  <h3>Certifications</h3>
+	  <ol>
+  		<li>ECS Skills Certification</li>
+  		<li>Computer Programming 1 Certification</li>
+  		<li>Graphics 1 Certification</li>
+	  </ol>
+	  <h3>Titles</h3>
+	  <ol>
+  		<li>Debate Team Captain</li>
+  		<li>2nd Place TSA State in Coding</li>
+  		<li>Secretary of Skyline MESA</li>
 	  </ol>
   </div>
   <div class="footer">
