--- a/basketball/index.html
+++ b/basketball/index.html
@@ -14,7 +14,10 @@
   <div class="nav">
     <h3><a href="../index.html">Home</a> | <a href="../ecs/index.html">ECS</a> | <a href="index.html">Basketball</a></h3>
   </div>
-  <div class="content">Hello World!
+  <div class="content">
+	  
+	  
+	  
   </div>
   <div class="footer">
     <h4> <a href="../aboutme.html">About Me</a> | <a href="mailto:kkapptie@granitesd.org">Contact</a> | Copyright 2023 </h4>
