--- a/ecs/index.html
+++ b/ecs/index.html
@@ -14,7 +14,14 @@
   <div class="nav">
     <h3><a href="../index.html">Home</a> | <a href="index.html">ECS</a> | <a href="../basketball/index.html">Basketball</a> </h3>
   </div>
-  <div class="content">Hello World!
+  <div class="content">
+	  <h3>ECS Project Links</h3>
+	  <ul>
+  		<li>Typing Results</li>
+		<li>AI Project | <a href="AI.pdf">PDF</a> | <a href="AI.pptx">PPTX</a></li>
+  		<li>Coding Project</li>
+		<li>Certifications</li>
+          </ul>
   </div>
   <div class="footer">
     <h4> <a href="../aboutme.html">About Me</a> | <a href="mailto:kkapptie@granitesd.org">Contact</a> | Copyright 2023 </h4>
