--- a/ecs/index.html
+++ b/ecs/index.html
@@ -15,13 +15,13 @@
     <h3><a href="../index.html">Home</a> | <a href="index.html">ECS</a> | <a href="../basketball/index.html">Basketball</a> </h3>
   </div>
   <div class="content">
-	  <h3>ECS Project Links</h3>
+	 <h3>ECS Project Links</h3>
 	  <ul>
-  		<li>Typing Results</li>
-		<li>AI Project | <a href="AI.pdf">PDF</a> | <a href="AI.pptx">PPTX</a></li>
-  		<li>Coding Project</li>
-		<li>Certifications</li>
-          </ul>
+		 <li>Typing Results </li>
+		 <li>AI Project | <a href="AsteroidMining.pdf">PDF</a> <a href="AsteroidMining.pptx">PowerPoint</a></li>
+		 <li>Coding Project </li>
+		 <li>Certifications </li>
+	  </ul>
   </div>
   <div class="footer">
     <h4> <a href="../aboutme.html">About Me</a> | <a href="mailto:kkapptie@granitesd.org">Contact</a> | Copyright 2023 </h4>
